syntax = "proto3";

option go_package = "/internal/pkg/genproto";

import "muallimah-submodule/protos/common.proto";
import "muallimah-submodule/protos/users_course.proto";

package protos;

service UserLessonService {
    rpc CreateUserLesson(UserLessonCreateReq) returns (Void);
    rpc GetUserLesson(ById) returns (UserLesson);
    rpc UpdateUserLesson(UserLessonUpdateReq) returns (Void);
    rpc DeleteUserLesson(ById) returns (Void);
    rpc ListUserLessons(UserLessonListsReq) returns (UserLessonListsRes);
}

message UserLesson {
    string id = 1;
    string LessonId = 2;
    UserCourse UserCourse = 3;
    string status = 4;  // Enum type: progress_status_type
}

message UserLessonCreateReq {
    string lesson_id = 1;
    string UserCourseId = 2;
    string status = 3;
}


message UserLessonUpdateReq {
    string id = 1;
    UserUptbody body = 2;
}

message UserUptbody {
    string status = 1;
}

message UserLessonListsReq {
    string UserCourseId = 1;
    Pagination filter = 2; 
}

message UserLessonListsRes {
    repeated UserLesson user_lessons = 1;
    Pagination pagination = 2;
    int32 TotalCount = 3;
}

